  - Fixed a flip flopped event for Hezbollah - Israel border war

 Content:
  - Added a new special project "Helicopter Design Experiments"

 Ideological Powers:
  - Modifiers in tooltips now have text icons
  - Communists:
   - 5-Year-Plans are no longer built from pieces, but you choose from a single type of 5-year plan. The modifiers have been increased in return
   - Switched Incompatible Economy debuff (+50% Foreign Investment Cost) to "Hard Labour", which increases worker requirements for building by 15%
  - Socialists:
   - Welfare State now gives -15% bonus to health & social spending instead of a PP reduction for law changes
   - Economic Interventionism no longer gives you additional decisions, instead you get a -25% PP and money cost for Internal Investments (+50% Renewable construction speed for greens)
   - Peaceful Diplomacy no longer gives a construction speed buff but instead only the PP buff
  - Liberals:
   - Business Friendly now gives +10% corporate tax instead of just +10% office tax
   - Anti-Military now gives -15% military/dockyard output instead of -25%
  - Autocrats:
   - Good Connections now gives oligarchs +10% resource export income rather than civilian factory income
   - Replaced Unlimited Power (-25% Advisor Cost) with Power Through Strength (+25% Party Popularity Stability Modifier)
   - Paramilitary unit decision for fascists no longer increases unit attrition

 Graphics:
  - Fixed the USNA flag being incorrectly compressed causing it to not properly grab the formable flag

v1.11.1b

 AI:
  - AI should be more likely ratify NATO applicants if they are influenced by a NATO member, has high opinion and if any of their neighbors are emerging, nationalist or salafist
  - USA should be more apt to declare operation enduring freedom if there is less than 25% threat or if they have not done so before Jan 2005
  - SER will now seek to rebuild Yugoslavia in peace deals at half cost after completion of the appropriate focus

 Balance: