@@ -669,54 +669,4 @@ subparty_policies_category = {
 			change_the_military_opinion = yes
 		}
 	}
-
-	foreign_recruitment_campaign = {
-
-		visible = {
-			OR = {
-				is_in_array = { ruling_party = 9 }	#Vilayat_e_Faqih
-				is_in_array = { ruling_party = 11 }	#Caliphate
-			}
-		}
-
-		available = {
-		}
-
-		cost = 50
-		days_remove = 30
-		days_re_enable = 15 #2 month recruitment to balance
-		fixed_random_seed = no
-
-		remove_effect = {
-			log = "[GetDateText]: [Root.GetName]: Decision remove foreign_recruitment_campaign"
-			add_manpower = 4000
-			add_to_temp_variable = { treasury_change = -1 }
-			modify_treasury_effect = yes
-			random_list = {
-				95 = {
-					add_stability = -0.01
-					add_war_support = 0.01
-				}
-				5 = {
-					random_list = {
-						40 = {
-							add_popularity = { ideology = communism popularity = 0.02 }
-						}
-						50 = {
-							add_popularity = { ideology = neutrality popularity = 0.02 }
-						}
-						10 = {
-							add_popularity = { ideology = democratic popularity = 0.02 }
-						}
-					}
-				}
-			}
-			recalculate_party = yes
-
-			set_temp_variable = { temp_opinion = 2 }
-			change_foreign_jihadis_opinion = yes
-			change_irgc_opinion = yes
-			change_iranian_quds_force_opinion = yes
-		}
-	}
 }
