@@ -834,7 +834,27 @@ ideas = {
 
 			modifier = {
 				corruption_cost_factor = -0.15
+				economic_cycles_cost_factor = -0.15
 				internal_factions_cost_factor = -0.15
+				bureaucracy_cost_factor = -0.15
+				Military_Spending_cost_factor = -0.15
+				crime_fighting_cost_factor = -0.15
+				education_budget_cost_factor = -0.15
+				health_budget_cost_factor = -0.15
+				social_budget_cost_factor = -0.15
+				trade_laws_cost_factor = -0.15
+				Nuclear_Status_cost_factor = -0.15
+				Nuclear_Stance_cost_factor = -0.15
+				Conscription_Law_cost_factor = -0.15
+				Military_Status_Women_cost_factor = -0.15
+				Foreign_Intervention_Law_cost_factor = -0.15
+				Officer_Training_Law_cost_factor = -0.15
+				materiel_manufacturer_cost_factor = -0.15
+				tank_manufacturer_cost_factor = -0.15
+				aircraft_manufacturer_cost_factor = -0.15
+				naval_manufacturer_cost_factor = -0.15
+				tax_rate_change_multiplier_modifier = -0.15
+				migration_laws_cost_factor = -0.15
 			}
 		}
 		IP_for_king_and_queen = {
@@ -857,6 +877,27 @@ ideas = {
 			modifier = {
 				army_core_attack_factor = 0.10
 				army_core_defence_factor = 0.10
+			}
+		}
+		IP_crown_estate = {
+			on_add = { log = "[GetDateText]: [Root.GetName]: add idea IP_crown_estate" }
+			allowed = {
+				always = yes
+			}
+
+			allowed_civil_war = {
+				always = yes
+			}
+
+			cancel = {
+				NOT = {
+					is_in_array = { ruling_party = 10 }	#Kingdom
+					is_in_array = { ruling_party = 23 }	#Monarchist
+				}
+			}
+
+			modifier = {
+				population_tax_income_multiplier_modifier = 0.10
 			}
 		}
 		IP_outdated_ideals = {
@@ -899,7 +940,7 @@ ideas = {
 			}
 
 			modifier = {
-				communism_drift = 0.05
+				communism_drift = 0.10
 			}
 		}
 		IP_religious_law_salafist = {
@@ -919,7 +960,28 @@ ideas = {
 			}
 
 			modifier = {
-				fascism_drift = 0.05
+				fascism_drift = 0.10
+			}
+		}
+		IP_recruitment_campaign = {
+			on_add = { log = "[GetDateText]: [Root.GetName]: add idea IP_recruitment_campaign" }
+			allowed = {
+				always = yes
+			}
+
+			allowed_civil_war = {
+				always = yes
+			}
+
+			cancel = {
+				NOT = {
+					is_in_array = { ruling_party = 9 }	#Vilayat_e_Faqih
+					is_in_array = { ruling_party = 11 }	#Caliphate
+				}
+			}
+
+			modifier = {
+				weekly_manpower = 300
 			}
 		}
 		IP_nationalist_liberation_movements = {
