@@ -9102,6 +9102,16 @@ IP_idea_on_startup_configuration = {
 				is_in_array = { ruling_party = 10 }	#Kingdom
 				is_in_array = { ruling_party = 23 }	#Monarchist
 			}
+			NOT = { has_idea = IP_crown_estate }
+		}
+		add_ideas = IP_crown_estate
+	}
+	if = {
+		limit = {
+			OR = {
+				is_in_array = { ruling_party = 10 }	#Kingdom
+				is_in_array = { ruling_party = 23 }	#Monarchist
+			}
 			NOT = { has_idea = IP_outdated_ideals }
 		}
 		add_ideas = IP_outdated_ideals
@@ -9120,6 +9130,16 @@ IP_idea_on_startup_configuration = {
 			NOT = { has_idea = IP_religious_law_salafist }
 		}
 		add_ideas = IP_religious_law_salafist
+	}
+	if = {
+		limit = {
+			OR = {
+				is_in_array = { ruling_party = 9 }	#Vilayat_e_Faqih
+				is_in_array = { ruling_party = 11 }	#Caliphate
+			}
+			NOT = { has_idea = IP_recruitment_campaign }
+		}
+		add_ideas = IP_recruitment_campaign
 	}
 	if = {
 		limit = {
@@ -9404,6 +9424,16 @@ IP_idea_weekly_configuration = {
 				is_in_array = { ruling_party = 10 }	#Kingdom
 				is_in_array = { ruling_party = 23 }	#Monarchist
 			}
+			NOT = { has_idea = IP_crown_estate }
+		}
+		add_ideas = IP_crown_estate
+	}
+	if = {
+		limit = {
+			OR = {
+				is_in_array = { ruling_party = 10 }	#Kingdom
+				is_in_array = { ruling_party = 23 }	#Monarchist
+			}
 			NOT = { has_idea = IP_outdated_ideals }
 		}
 		add_ideas = IP_outdated_ideals
@@ -9422,6 +9452,16 @@ IP_idea_weekly_configuration = {
 			NOT = { has_idea = IP_religious_law_salafist }
 		}
 		add_ideas = IP_religious_law_salafist
+	}
+	if = {
+		limit = {
+			OR = {
+				is_in_array = { ruling_party = 9 }	#Vilayat_e_Faqih
+				is_in_array = { ruling_party = 11 }	#Caliphate
+			}
+			NOT = { has_idea = IP_recruitment_campaign }
+		}
+		add_ideas = IP_recruitment_campaign
 	}
 	if = {
 		limit = {
