@@ -187,3 +187,66 @@ defined_text = {
 		localization_key = "IP_autocrat_yes_men_army_tooltip3_key"
 	}
 }
+defined_text = {
+	name = IP_monarchist_for_king_and_queen_tooltip1
+
+	text = {
+		localization_key = "IP_monarchist_for_king_and_queen_tooltip1_key"
+	}
+}
+defined_text = {
+	name = IP_monarchist_for_king_and_queen_tooltip2
+
+	text = {
+		localization_key = "IP_monarchist_for_king_and_queen_tooltip2_key"
+	}
+}
+defined_text = {
+	name = IP_monarchist_crown_estate_tooltip
+
+	text = {
+		localization_key = "IP_monarchist_crown_estate_tooltip_key"
+	}
+}
+defined_text = {
+	name = IP_monarchist_outdated_ideals_tooltip
+
+	text = {
+		localization_key = "IP_monarchist_outdated_ideals_tooltip_key"
+	}
+}
+defined_text = {
+	name = IP_fundamentalist_recruitment_campaign_tooltip
+
+	text = {
+		localization_key = "IP_fundamentalist_recruitment_campaign_tooltip_key"
+	}
+}
+defined_text = {
+	name = IP_fundamentalist_national_liberation_movements_tooltip1
+
+	text = {
+		localization_key = "IP_fundamentalist_national_liberation_movements_tooltip1_key"
+	}
+}
+defined_text = {
+	name = IP_fundamentalist_national_liberation_movements_tooltip2
+
+	text = {
+		localization_key = "IP_fundamentalist_national_liberation_movements_tooltip2_key"
+	}
+}
+defined_text = {
+	name = IP_fundamentalist_national_liberation_movements_tooltip3
+
+	text = {
+		localization_key = "IP_fundamentalist_national_liberation_movements_tooltip3_key"
+	}
+}
+defined_text = {
+	name = IP_fundamentalist_international_pariah_tooltip
+
+	text = {
+		localization_key = "IP_fundamentalist_international_pariah_tooltip_key"
+	}
+}
