@@ -785,8 +785,6 @@
  Civil_war_decisions_desc: "Our country is engulfed in a civil war. This allows some unethical ways for us to act. The methods are extreme and are necessary"
  confiscate_civilian_vehicles: "Confiscate Civilian Vehicles"
  confiscate_civilian_vehicles_desc: "We can confiscate and convert civilian vehicles into technicals and armored troop transports. Despite the war, civilian vehicles are still abundant, and new ones can easily be smuggled across the border."
- foreign_recruitment_campaign: "Foreign Recruitment Campaign"
- foreign_recruitment_campaign_desc: "A large portion of our fighters originate from other countries. We can run a temporary recruitment campaign to gather more possible soldiers for our armies."
  smuggle_small_arms: "Smuggle Small Arms"
  smuggle_small_arms_desc: "In addition to producing our own small arms in local workshops, we can try to pull some strings and smuggle weapons from abroad."
  smuggle_heavy_weapons: "Smuggle Heavy Weapons"
