@@ -69,10 +69,12 @@
  IP_invisible_hand: "Invisible Hand"
  IP_business_friendly_environment: "Business Friendly"
  IP_good_connections: "Good Connections"
- IP_keep_it_in_the_family: "Keep it in the Family"
+ IP_keep_it_in_the_family: "Royal Decree"
  IP_for_king_and_queen: "For King and Queen"
+ IP_crown_estate: "Crown Estate"
  IP_religious_law_emerging: "Sharia Law"
  IP_religious_law_salafist: "Sharia Law"
+ IP_recruitment_campaign: "Foreign Fighters"
  IP_nationalist_liberation_movements: "Nationalist Liberation Movements"
  IP_anti_military: "Anti-Military"
  IP_yes_men_army: "Army of Yes-Men"
@@ -184,23 +186,32 @@
  IP_autocrat_yes_men_army_delayed: "§LWhile having a loyal officer cadre is the core of holding power, being surrounded by yes-men and bootlickers can lead to us completely being misinformed on the quality of our military. Turns out that people who are afraid of losing their job or worse lie to save their own skin.§!"
  IP_monarchist_category_desc: "§YMonarchists§!\nPowers available to:\n[Kingdom_L]\n[Monarchist_L]"
  IP_monarchist_category_desc_delayed: "§LMonarchists rely on lineage and glory to rule over countries. Focusing power into one family has its benefits. This family brings power and monarchs are good at inspiring their people.§!"
- IP_monarchist_keep_it_in_the_family: "§YKeep it in the Family§!\nCost to change Corruption: §G-15%§!\nCost to change Internal Faction: §G-15%§!"
- IP_monarchist_keep_it_in_the_family_delayed: "§LFilling political positions full of relatives has its benefits. No one will question us when kick out inefficient administrators or corrupt individuals and we don't have to worry about power dynamics when all important people show loyalty by blood.§!"
- IP_monarchist_for_king_and_queen: "§YFor King and Queen§!\nDivision Defence on core territory: §G+10.0%§!\nDivision Attack on core territory: §G+10.0%§!"
+ IP_monarchist_keep_it_in_the_family: "§YRoyal Decree§!\n£economy_laws_cost_texticon  Laws Cost: §G-15%§!"
+ IP_monarchist_keep_it_in_the_family_delayed: "§LThe monarch is not bound by a political progress. When the country needs to switch its direction, it can be done so at the whim of the ruler.§!"
+ IP_monarchist_for_king_and_queen: "§YFor King and Queen§!\n[IP_monarchist_for_king_and_queen_tooltip1]: §G+10.0%§!\n[IP_monarchist_for_king_and_queen_tooltip2]: §G+10.0%§!"
+ IP_monarchist_for_king_and_queen_tooltip1_key: "$MODIFIERS_ARMY_CORE_ATTACK_FACTOR$"
+ IP_monarchist_for_king_and_queen_tooltip2_key: "$MODIFIERS_ARMY_CORE_DEFENCE_FACTOR$"
  IP_monarchist_for_king_and_queen_delayed: "§L[IP_monarch_name] inspires our people and soldiers to fight on even when the situation is desperate. Those who are worthy will be rewarded, either on Earth or in Heaven.§!"
- IP_monarchist_crown_estate: "§YCrown Estate§!\nTax Revenue from Population: §G+10%§!"
+ IP_monarchist_crown_estate: "§YCrown Estate§!\n[IP_monarchist_crown_estate_tooltip]: §G+10.00%§!"
+ IP_monarchist_crown_estate_tooltip_key: "$population_tax_income_multiplier_modifier$"
  IP_monarchist_crown_estate_delayed: "§LThe Royal Family holds much land in [ROOT.GetName]. The utilization of that land brings massive monetary gains to the state, and perhaps, in the pockets of [IP_monarch_name].§!"
- IP_monarchist_outdated_ideals: "§YOutdated Ideals§!\nStability: §R-15.00%§!"
+ IP_monarchist_outdated_ideals: "§YOutdated Ideals§!\n[IP_monarchist_outdated_ideals_tooltip]: §R-15.00%§!"
+ IP_monarchist_outdated_ideals_tooltip_key: "$MODIFIER_STABILITY_FACTOR$"
  IP_monarchist_outdated_ideals_delayed: "§LMonarchy isn't exactly the latest fashion on government. People these days yearn for other options than absolute monarchy. You would have to be Danish or something to think that monarchies are still cool.§!"
  IP_fundamentalist_symbol_desc: "§YFundamentalists§!\nPowers available to:\n[Vilayat_e_Faqih_L]\n[Caliphate_L]"
  IP_fundamentalist_symbol_desc_delayed: "§LFundamentalists are hardline conservatives following a radical of ultraconservative form of Islam. Their main goal is to spread those conservative views to other countries as well.§!"
- IP_fundamentalist_religious_law: "§YSharia Law§!\nDaily Outlook Support: §G+0.05§!"
+ IP_fundamentalist_religious_law: "§YSharia Law§!\n£salafist_outlook_campaign_cost_modifier_texticon Daily Outlook Support: §G+0.10§!"
  IP_fundamentalist_religious_law_delayed: "§LOur justice and legal system is heavily influenced by the idea of Sharia, or Islamic law. By using the Quran as a basis for our institutions we can rid the populace of decadent ideas.§!"
- IP_fundamentalist_recruitment_campaign: "§YForeign Fighters§!\nWe can §YRecruit Foreigners§! into our army through §YDecisions§!"
+ IP_fundamentalist_recruitment_campaign: "§YForeign Fighters§!\n[IP_fundamentalist_recruitment_campaign_tooltip]: §G+300§!"
+ IP_fundamentalist_recruitment_campaign_tooltip_key: "$MODIFIER_WEEKLY_MANPOWER$"
  IP_fundamentalist_recruitment_campaign_delayed: "§LThe world is full of disenfranchised young Muslims. We should entice to come to us and join our military. They are hardworking, loyal and they can easily be manipulated to believe in our cause.§!"
- IP_fundamentalist_national_liberation_movements: "§YNationalist Liberation Movements§!\nSend intervention force tension limit: §G-10.0%§!\nMilitary aid tension limit: §G-10.0%§!\nMax intervention force divisions: §G+2§!"
+ IP_fundamentalist_national_liberation_movements: "§YNationalist Liberation Movements§!\n[IP_fundamentalist_national_liberation_movements_tooltip1]: §G-10.0%§!\n[IP_fundamentalist_national_liberation_movements_tooltip2]: §G-10.0%§!\n[IP_fundamentalist_national_liberation_movements_tooltip3]: §G+2§!"
+ IP_fundamentalist_national_liberation_movements_tooltip1_key: "$MODIFIER_SEND_VOLUNTEERS_TENSION_LIMIT$"
+ IP_fundamentalist_national_liberation_movements_tooltip2_key: "$MODIFIER_LEND_LEASE_TENSION_LIMIT$"
+ IP_fundamentalist_national_liberation_movements_tooltip3_key: "$MODIFIER_SEND_VOLUNTEER_SIZE$"
  IP_fundamentalist_national_liberation_movements_delayed: "§LThere are several groups fighting against Zionist oppressors. As devout Muslims, it is our duty to help these groups against their oppressors!§!"
- IP_fundamentalist_international_pariah: "§YInternational Pariah§!\nResources to Market: §Y-50%§!"
+ IP_fundamentalist_international_pariah: "§YInternational Pariah§!\n[IP_fundamentalist_international_pariah_tooltip]: §Y-50%§!"
+ IP_fundamentalist_international_pariah_tooltip_key: "$MODIFIER_MIN_EXPORT_FACTOR$"
  IP_fundamentalist_international_pariah_delayed: "§LBeing extreme can be challenging as it is very difficult to find countries willing to do trade with us. Maybe people just understand the phrase \"theocracies are radical\" differently than we do?§!"
 
  IP_monarch_name_monarch: "The Monarch"
