@@ -10,7 +10,7 @@ v1.11.2
   - Modifiers in tooltips now have text icons
   - Communists:
    - 5-Year-Plans are no longer built from pieces, but you choose from a single type of 5-year plan. The modifiers have been increased in return
-   - Switched Incompatible Economy debuff (+50% Foreign Investment Cost) to "Hard Labour", which increases worker requirements for building by 15%
+   - Replaced Incompatible Economy (+50% Foreign Investment Cost) with Hard Labour (+15% Building Worker Requirement)
   - Socialists:
    - Welfare State now gives -15% bonus to health & social spending instead of a PP reduction for law changes
    - Economic Interventionism no longer gives you additional decisions, instead you get a -25% PP and money cost for Internal Investments (+50% Renewable construction speed for greens)
@@ -22,6 +22,11 @@ v1.11.2
    - Good Connections now gives oligarchs +10% resource export income rather than civilian factory income
    - Replaced Unlimited Power (-25% Advisor Cost) with Power Through Strength (+25% Party Popularity Stability Modifier)
    - Paramilitary unit decision for fascists no longer increases unit attrition
+  - Monarchists:
+   - Replaced Keep It In The Family (-15% corruption and internal faction cost) with Royal Decree (-15% Laws Cost)
+  - Fundamentalists:
+   - Sharia Law now gives +0.10 Outlook support instead of +0.05
+   - Foreign Fighters now gives you +300 weekly manpower rather than a repeatable decision
 
  Graphics:
   - Fixed the USNA flag being incorrectly compressed causing it to not properly grab the formable flag
